force-app/main/default/objects/Project_Contact_Relation__c/Project_Contact_Relation__c.object-meta.xml
<CustomObject>
    <description>1. Integration relevant
2. ZRD
3. SF- 61</description>
    <label>Projekt Kontakt Beziehung</label>
    <nameField>
        <displayFormat>PCR-{0000}</displayFormat>
        <label>Project Contact Relation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Projekt Kontakt Beziehungen</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>