force-app/main/default/objects/Project_Contact_Relation__c/fields/Contact_Role__c.field-meta.xml
<CustomField>
    <fullName>Contact_Role__c</fullName>
    <description>1. Integration relevant
2. ZR
3.</description>
    <label>Contact Role</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Contact_Role</valueSetName>
    </valueSet>
</CustomField>