force-app/main/default/objects/Project_Contact_Relation__c/fields/Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Full_Name__c</fullName>
    <description>1. Not integration relevant
2. ZRD
3. Used to display full name and link to contact on Contacts related list on Projects.</description>
    <formula>HYPERLINK(&quot;/lightning/r/Project_Contact_Relation__c/&quot;+Contact__r.Id+&quot;/view&quot;,  Contact__r.FirstName + &quot; &quot; +  Contact__r.LastName)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Full Name</label>
    <type>Text</type>
</CustomField>